<resources>
    <string name="app_name">LoginApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_to_get_otp">Enter your email to get OTP</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="get_otp">Get OTP</string>
    <string name="please_enter_the_otp_recieve_at">Please enter th OTP recieve at</string>
    <string name="please_enter_the_otp_receive_at">Please enter the OTP receive at</string>
    <string name="given_email">Given email</string>
    <string name="verify">Verify</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="congrats">Congrats</string>
    <string name="sorry">Sorry</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="login_page">Login Page</string>
    <string name="otp_page">OTP Page</string>
    <string name="password_page">Password Page</string>
    <string name="renter_your_password">Re-Enter Your Password</string>
    <string name="your_password_does_not_match">Your password does not match</string>
</resources>