<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtpFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/please_enter_the_otp_receive_at"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/etGivenEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_20"
        android:hint="@string/given_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="1"
            android:padding="@dimen/dp_20" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="1"
            android:padding="@dimen/dp_20" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="1"
            android:padding="@dimen/dp_20" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="1"
            android:padding="@dimen/dp_20" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/verify"
        android:textSize="@dimen/sp_20" />
</LinearLayout>